--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "Sense Luo <senseluo@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.15.4"
+    "express": "^4.15.4",
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "^1.0.0"
   }
 }
