--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "npm": "5.0.3"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "repository": "git@github.com:senseluo/yalevanrental.git",
   "author": "Sense Luo <senseluo@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "express": "^4.15.4",
+    "nodemon": "^1.11.0",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0"
   }
