--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.15.4",
+    "mongoose": "^4.11.7",
     "nodemon": "^1.11.0",
-    "passport": "^0.3.2",
+    "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth20": "^1.0.0"
   }
