--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Sense Luo <senseluo@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "cookie-session": "^1.3.0",
     "express": "^4.15.4",
     "mongoose": "^4.11.7",
     "nodemon": "^1.11.0",
