--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "yalevanrental",
   "version": "1.0.0",
+  "private": true,
   "main": "index.js",
   "engines": {
     "node": "8.1.1",
@@ -8,12 +9,15 @@
   },
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "server": "nodemon index.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": "git@github.com:senseluo/yalevanrental.git",
   "author": "Sense Luo <senseluo@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "concurrently": "^3.5.0",
     "cookie-session": "^1.3.0",
     "express": "^4.15.4",
     "mongoose": "^4.11.7",
