--- a/client/package.json
+++ b/client/package.json
@@ -3,14 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "proxy": {
-    "/auth/google": {
+    "/auth/*": {
+      "target": "http://localhost:5000"
+    },
+    "/api/*": {
       "target": "http://localhost:5000"
     }
   },
   "dependencies": {
+    "axios": "^0.16.2",
+    "materialize-css": "^0.100.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-scripts": "1.0.11"
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.1.2",
+    "react-scripts": "1.0.11",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
