--- a/client/package.json
+++ b/client/package.json
@@ -12,12 +12,14 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
-    "materialize-css": "^0.100.1",
+    "lodash": "^4.17.4",
+    "materialize-css": "^0.100.2",
+    "querystring": "^0.2.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
-    "react-router-dom": "^4.1.2",
-    "react-scripts": "1.0.11",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "^1.0.12",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
   },
