--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "start": "node index.js",
     "server": "nodemon index.js",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild":
+      "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "repository": "git@github.com:senseluo/yalevanrental.git",
   "author": "Sense Luo <senseluo@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.17.2",
     "concurrently": "^3.5.0",
     "cookie-session": "^1.3.1",
     "express": "^4.15.4",
@@ -24,6 +27,7 @@
     "nodemon": "^1.11.0",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
-    "passport-google-oauth20": "^1.0.0"
+    "passport-google-oauth20": "^1.0.0",
+    "stripe": "^4.24.1"
   }
 }
