--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "server": "nodemon index.js",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild":
-      "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "repository": "git@github.com:senseluo/yalevanrental.git",
   "author": "Sense Luo <senseluo@gmail.com>",
@@ -23,8 +22,8 @@
     "concurrently": "^3.5.0",
     "cookie-session": "^1.3.1",
     "express": "^4.15.4",
-    "mongoose": "^4.11.9",
-    "nodemon": "^1.11.0",
+    "mongoose": "^4.11.10",
+    "nodemon": "^1.12.0",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth20": "^1.0.0",
