--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "start": "node index.js",
     "server": "nodemon index.js",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "dev": "concurrently \"npm run server\" \"npm run client\" \"npm run webhook\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
+    "webhook": "./sendgrid_webhook.sh"
   },
   "repository": "git@github.com:senseluo/yalevanrental.git",
   "author": "Sense Luo <senseluo@gmail.com>",
@@ -22,11 +23,14 @@
     "concurrently": "^3.5.0",
     "cookie-session": "^1.3.1",
     "express": "^4.15.4",
+    "localtunnel": "^1.8.3",
     "mongoose": "^4.11.10",
     "nodemon": "^1.12.0",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth20": "^1.0.0",
+    "path-parser": "^2.0.2",
+    "sendgrid": "^5.2.3",
     "stripe": "^4.24.1"
   }
 }
